# depthpaper

./: Cargo.toml  LICENSE
crates/cli/: Cargo.toml
crates/cli/src/: cache.rs  depth.rs  main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  depth.rs  main.rs  renderer.rs  wayland.rs
src/: config.rs  cursor.rs  depth.rs  main.rs  renderer.rs  shader.wgsl  wayland.rs
