[package]
name = "depthpaper"
version = "0.1.0"
edition = "2024"
description = "Parallax wallpaper daemon for Wayland using depth estimation"
license = "MIT"

[dependencies]
# Wayland client
smithay-client-toolkit = { version = "0.20", features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# Rendering
wgpu = "23" 
raw-window-handle = "0.6"
bytemuck = { version = "1", features = ["derive"] }

# Image loading
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Event loop
calloop = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
anyhow = "1"
directories = "5"
nix = { version = "0.29", features = ["signal"] }