[workspace]
resolver = "3"
members = ["crates/daemon", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25", default-features = false }
serde = { version = "1", features = ["derive"] }