[package]
name = "depthpaper-cli"
description = "Depthpaper CLI: bake wallpapers and configure the daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "depthpaper-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

image = { workspace = true, features = ["jpeg", "png", "webp"] }

ort = { version = "=2.0.0-rc.12", features = ["cuda"] }
blake3 = "1"

clap = { version = "4", features = ["derive", "env"] }
toml_edit = "0.22"
directories = "5"