[package]
name = "depthpaper-daemon"
description = "Parallax wallpaper daemon for Wayland"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "depthpaper-daemon"
path = "src/main.rs"

[dependencies]
smithay-client-toolkit = { version = "0.20", features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-backend = { version = "0.3", features = ["client_system"] }

wgpu = "23"
raw-window-handle = "0.6"
bytemuck = { version = "1", features = ["derive"] }

image = { workspace = true, features = ["png"] }

serde = { workspace = true }
toml = "0.8"

calloop = "0.14"
calloop-wayland-source = "0.4"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
pollster = "0.4.0"